# universal-ai-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  uv.toml
.claude/: CLAUDE.md
config/: mirrors.yaml  modules.yaml  orchestrator.yaml  providers.yaml  stack_templates.yaml  workflow_profiles.yaml
docs/development/: README.md  hot-test-bugs.md  master-plan.md  scenario-testing-skill-upgrade-plan.md  structured-output-research.md
docs/development/blockify/: idea-blocks-spec.md  integration-plan.md  overview.md
docs/development/claude-best-practice/: overview.md
docs/development/get-shit-done/: integration-plan.md  overview.md
docs/development/orchestrator/: overview.md
docs/project/: api-reference.md  architecture.md  orchestrator.md
scripts/: check-mirrors.sh  deploy.sh  setup.sh  smoke_test.py
src/universal_ai_mcp/: __init__.py
src/universal_ai_mcp/core/: __init__.py  config.py  dynamic_config.py  logging.py  registry.py  server.py  session_store.py
src/universal_ai_mcp/entities/: __init__.py  audit_report_entity.py  dev_session_entity.py  idea_block_entity.py  janitor_action_entity.py  memory_entity.py  module_entity.py  plan_entity.py  project_entity.py  provider_entity.py  session_entity.py  task_entity.py  workflow_profile_entity.py
tests/: conftest.py  test_orchestrator_entities.py  test_orchestrator_modules.py
tests/unit/: test_block_retriever.py  test_convention_adapter.py  test_idea_block.py  test_json_extractor.py  test_memory.py  test_semantic_compressor.py  test_stack_detector.py  test_task_executor.py
(+55 files in other folders)
